--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
   </header>
 
-  <div class="container main-img">
+  <div class="main-img">
     <img sizes="(max-width: 535px) 300px, (max-width: 800px) 535px, 800px" srcset="img/main_mobile.jpg 535w, img/main_tablet.jpg 800w, img/main_desktop.jpg 1800w" src="img/main_desktop.jpg" alt="main image">
   </div>
 
@@ -28,7 +28,7 @@
       <a href="https://github.com/mouseProgrammouse/tellMeYourStory" target="_blank">
         <img sizes="(max-width: 535px) 300px, (max-width: 800px) 535px, 800px" srcset="img/tellme_mobile.jpg 535w, img/tellme_tablet.jpg 800w, img/tellme_desktop.jpg 1800w" src="img/tellme_mobile.jpg" alt="Tell me your story" >
         <h3>Tell me your story</h3>
-        <span>github.com /mouseProgrammouse /tellMeYourStory</span>
+        <p class="description">github.com /mouseProgrammouse /tellMeYourStory</p>
       </a>
     </div>
 
@@ -36,7 +36,7 @@
       <a href="https://github.com/mouseProgrammouse/Mockup-to-Article" target="_blank">
         <img sizes="(max-width: 535px) 300px, (max-width: 800px) 535px, 800px" srcset="img/article_mobile.jpg 535w, img/article_tablet.jpg 800w, img/article_desktop.jpg 1800w" src="img/article_mobile.jpg" alt="html code">
         <h3>Mockup to article</h3>
-        <span>github.com /mouseProgrammouse /Mockup-to-Article</span>
+        <p class="description">github.com /mouseProgrammouse /Mockup-to-Article</p>
       </a>
     </div>
 
@@ -44,7 +44,7 @@
       <a href="https://github.com/mouseProgrammouse/Animal-Trading-Cards-Overview" target="_blank">
         <img sizes="(max-width: 535px) 300px, (max-width: 800px) 535px, 800px" srcset="img/animal_mobile.jpg 535w, img/animal_tablet.jpg 800w, img/animal_desktop.jpg 1800w" src="img/animal_mobile.jpg" alt="Corgi dog">
         <h3>Animal trading card</h3>
-        <span>github.com /mouseProgrammouse /Animal-Trading-Cards</span>
+        <p class="description">github.com /mouseProgrammouse /Animal-Trading-Cards</p>
       </a>
     </div>
 
